FIX: fixed issues with configuration and .env

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=tawsila
 
-spring.config.import=optional:classpath:.env,optional:./.env
+spring.config.import=optional:./.env
 
 # H2 DATABASE
 spring.datasource.url=${DB_URL}
@@ -8,7 +8,7 @@ spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=${DB_DRIVER}
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=validate
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
