--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
                 <version>${org.mapstruct.version}</version>
             </dependency>
 
+        <dependency>
+            <groupId>me.paulschwarz</groupId>
+            <artifactId>spring-dotenv</artifactId>
+            <version>4.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
