FEAT: TS-20  created the vehicle controller and fixed issues

--- a/src/main/resources/db/changelog/changelogs/vehicle-changelog.yaml
+++ b/src/main/resources/db/changelog/changelogs/vehicle-changelog.yaml
@@ -24,7 +24,7 @@ databaseChangeLog:
                   constraints:
                     nullable: false
               - column:
-                  name: max_volume_m3
+                  name: max_volumem3
                   type: DOUBLE
                   constraints:
                     nullable: false
