TS-23 added the delivery changelog for liquibase

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -2,3 +2,6 @@ databaseChangeLog:
   - include:
       file: changelogs/vehicle-changelog.yaml
       relativeToChangelogFile: true
+  - include:
+        file: changelogs/delivery-changelog.yaml
+        relativeToChangelogFile: true
