FEAT: TS-30 created the warehouse migration

--- a/src/main/resources/db/changelog/changelogs/warehouse-changelog.yaml
+++ b/src/main/resources/db/changelog/changelogs/warehouse-changelog.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: 0
+      id: create-table-wareshouses
       author: admin
       changes:
         - createTable:
