--- a/src/main/resources/db/changelog/changelogs/vehicle-changelog.yaml
+++ b/src/main/resources/db/changelog/changelogs/vehicle-changelog.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: 1
+      id: create-table-vehicles
       author: admin
       changes:
         - createTable:
