FEAT: TS-40 created the tour service interface with 2 methods

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.application.name=tawsila
 
 spring.config.import=optional:./.env
 
+spring.mvc.servlet.path=/api/v1
+
 # H2 DATABASE
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
